fix: align dots on the movable item

--- a/src/components/Main/Home/OnSale/_product-list.scss
+++ b/src/components/Main/Home/OnSale/_product-list.scss
@@ -13,7 +13,7 @@
 .list-inner-header {
   box-sizing: border-box;
   height: 30px;
-  padding-left: 15px;
+  padding: 0 15px;
   border: 1px solid $secondary_bg;
   font-weight: 400;
   color: $white_font;
@@ -21,7 +21,6 @@
 }
 
 // Item
-
 .list-item-wrapper {
   position: relative;
   width: 100%;
@@ -32,14 +31,14 @@
     position: absolute;
     top: 0;
     right: 0;
-    box-sizing: border-box;
     width: 100%;
     height: 100%;
-    padding: 0 15px;
   }
 
   .list-item-inner {
+    box-sizing: border-box;
     height: 100%;
+    padding: 0 15px;
     border: 1px solid rgba(255, 255, 255, 0);
   }
 
